--- a/simple-video-call/client/package.json
+++ b/simple-video-call/client/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
+    "peerjs": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.0.2",
-    "tailwind-merge": "^2.5.5"
+    "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.1",
+    "swr": "^2.3.2",
+    "tailwind-merge": "^2.5.5",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
